# Achilles

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyrightconfig.json
backend/: .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 20260517_195200-platform_foundation.py  20260702_120000-auth_security_schema.py  20260702_140000-knowledge_store_schema.py  20260703_120000-ai_foundation_schema.py  20260704_120000-knowledge_vectors.py  20260705_120000-query_engine_schema.py  20260706_120000-harvester_schema.py  20260707_120000-agent_engine_schema.py  20260708_120000-slack_settings.py  20260709_120000-smtp_settings.py  20260710_120000-notifications_schema.py  20260711_120000-telegram_settings.py  20260712_120000-mattermost_settings.py  20260713_120000-user_last_chat_model.py
backend/src/achilles/: __init__.py  cli.py  config.py  main.py
backend/src/achilles/admin/: __init__.py  dashboard.py  dependencies.py  maintenance.py  routes.py  schemas.py  service.py
backend/src/achilles/agent_engine/: __init__.py  constants.py  jobs.py  models.py  router.py  runs.py  schemas.py  service.py
backend/src/achilles/ai_foundation/: constants.py  models.py  prompt_texts.py  schemas.py
backend/src/achilles/api/: __init__.py  background.py  csrf.py  health.py  pagination.py  problems.py  rate_limit.py  request_id.py  router.py  security_headers.py  serialization.py  sse.py  validators.py
backend/src/achilles/auth/: constants.py  dependencies.py  models.py  schemas.py
backend/src/achilles/db/: base.py  connections.py  dependencies.py
backend/src/achilles/email/: api.py  compose.py  constants.py  i18n.py  jobs.py  models.py  schemas.py  service.py  smtp.py
backend/src/achilles/events/: __init__.py  constants.py  publisher.py  routes.py
backend/src/achilles/harvester/: __init__.py  constants.py  jobs.py  models.py  schemas.py
backend/src/achilles/infra/: lifecycle.py  rate_limit.py  redis.py
backend/src/achilles/knowledge_store/: __init__.py  constants.py  jobs.py  models.py  schemas.py
backend/src/achilles/mattermost/: __init__.py  client.py  constants.py  format.py  jobs.py  listener.py  models.py  phrases.py  schemas.py  service.py
backend/src/achilles/mcp/: __init__.py  asgi.py  constants.py  server.py
backend/src/achilles/messenger/: __init__.py  constants.py  phrases.py  pipeline.py
backend/src/achilles/notifications/: api.py  constants.py  dispatcher.py  i18n.py  jobs.py  models.py  schemas.py  service.py  webhooks.py
backend/src/achilles/public_api/: __init__.py  constants.py  dependencies.py  routes.py  schemas.py  service.py
backend/src/achilles/query_engine/: __init__.py  constants.py  models.py  schemas.py  service.py
backend/src/achilles/slack/: __init__.py  client.py  constants.py  format.py  jobs.py  models.py  phrases.py  schemas.py  service.py  signature.py
backend/src/achilles/telegram/: __init__.py  client.py  constants.py  format.py  jobs.py  models.py  phrases.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/admin/: conftest.py
backend/tests/admin/integration/: test_admin_access.py  test_dashboard.py  test_maintenance.py  test_platform_settings.py
backend/tests/admin/unit/: test_settings_schema.py
backend/tests/agent_engine/: conftest.py
backend/tests/agent_engine/api/: test_api_access.py  test_api_admin.py  test_api_agents.py
backend/tests/agent_engine/integration/: test_agent_tools.py  test_budget.py  test_governance.py  test_run_agent.py  test_run_lifecycle.py  test_scheduling.py
backend/tests/agent_engine/unit/: test_agent_loop.py  test_prompt_composition.py  test_slots.py  test_tools.py
backend/tests/ai_foundation/: conftest.py
backend/tests/ai_foundation/api/: test_api_discovery.py  test_api_registry.py  test_api_tools.py  test_assignment_dim_guard.py  test_assignment_size_guard.py  test_assignment_warmup.py  test_prompt_settings.py
backend/tests/ai_foundation/fixtures/: tiny_tokenizer.json
backend/tests/ai_foundation/integration/: test_default_model.py  test_model_lifecycle_lock.py  test_model_usage_upsert.py  test_provider_cascade.py  test_seed_migration.py  test_token_usage.py  test_tokenizer_seam.py  test_tools_registry.py  test_usage_recorder.py
backend/tests/ai_foundation/unit/: llm_wire.py  test_embeddings_client.py  (+8 more)
backend/tests/api/: conftest.py  test_api_conformance.py  test_api_pagination.py  test_cors.py  test_error_envelope.py  test_offset_pagination.py  test_security_headers.py
backend/tests/cache_workers/: conftest.py  test_cron_timezone.py  test_enqueue_idempotency.py  test_retry_backoff.py  test_scheduler_singleton.py  test_uniqueness_reaping.py
backend/tests/email/: conftest.py  test_admin_settings.py  test_compose.py  test_jobs.py  test_smtp_errors.py
backend/tests/events/: conftest.py  test_stream.py
backend/tests/factories/: admin.py  agents.py  ai.py  knowledge.py  llm.py  users.py
backend/tests/harvester/: conftest.py
backend/tests/knowledge_store/: conftest.py
backend/tests/mattermost/: conftest.py  test_admin_settings.py  test_format.py  test_inbound_job.py  test_listener.py
backend/tests/mcp/: conftest.py  test_mcp_surface.py
backend/tests/messenger/: test_phrases.py
backend/tests/notifications/: conftest.py  test_api_admin.py  test_api_feed.py  test_delivery_jobs.py  test_dispatcher.py  test_source_hooks.py  test_webhooks.py
backend/tests/public_api/: conftest.py  test_search.py
backend/tests/query_engine/: conftest.py
backend/tests/slack/: conftest.py  test_admin_settings.py  test_format.py  test_inbound_job.py  test_signature.py  test_webhook.py
backend/tests/telegram/: conftest.py  test_admin_settings.py  test_format.py  test_inbound_job.py  test_service.py  test_webhook.py
embeddings/: Dockerfile  pyproject.toml
embeddings/app/: main.py  manager.py  memory.py
embeddings/tests/: conftest.py  test_manager.py  test_persistence.py  test_routes.py
(+921 files in other folders)
