[project]
name = "achilles-embeddings"
version = "0.1.0"
description = "Built-in embeddings runtime: OpenAI-compatible, lazy weights, dynamic batching"
requires-python = ">=3.12,<3.13"
dependencies = [
    # The engine (dynamic batching) — pinned <3.14, hence this service's own image.
    "infinity-emb[torch]>=0.0.76",
    # Direct dependency on purpose: tool.uv.sources index pins apply to declared
    # dependencies only — left transitive, torch resolves to the CUDA build (+9GB).
    "torch>=2",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.uv]
# CPU wheels on purpose: CUDA multiplies the image for nothing on the default deploy.
index = [{ name = "pytorch-cpu", url = "https://download.pytorch.org/whl/cpu", explicit = true }]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
